<resources>
    <string name="app_name">Habitalize</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="max">MAX</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="clear_ul"><u>Clear Fields</u></string>
    <string name="clear">Clear Fields</string>

    <string name="set">Set</string>
    <string name="duration">Duration</string>
    <string name="minutes_per_day">Minutes Per Day</string>
    <string name="work_days">Work Days</string>
    <string name="submit">Submit</string>
    <string name="go_to">Go To</string>
    <string name="sample_day_of_week">Monday</string>
    <string name="name">Name</string>
    <string name="working_days">Working Days</string>
    <string name="update">Update</string>
    <string name="add_habit">Add Habit</string>
    <string name="settings">Settings</string>
    <string name="pick_date">Pick Date</string>
    <string name="start">Start</string>
    <string name="value_time_min">00</string>
    <string name="value_minutes_max">59</string>
    <string name="value_hours_max">23</string>
    <string name="sample_name">Sample Name</string>
    <string name="sample_date">yyyy-MM-dd</string>

    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="measure_common">minute(s)</string>
    <string name="sound_on">Sound On</string>
    <string name="vibrate_on">Vibrate On</string>
    <string name="percent">%</string>
    <string name="minutes">minutes</string>
    <string name="percent_string">percent</string>
    <string name="toggle_all">Toggle All</string>
    <string name="toggle_all_ul"><u>Toggle All</u></string>
</resources>
